test_output.txt
FAIL src/tools.test.ts
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation, specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\Thomas\.gemini\antigravity\playground\vector-shuttle\windy-mcp-server\node_modules\@modelcontextprotocol\sdk\dist\types.js:1
    import { z } from "zod";
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

    > 1 | import { McpError, ErrorCode } from "@modelcontextprotocol/sdk/types.js";
        | ^
      2 | import axios from "axios";
      3 | import { z } from "zod";
      4 |

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1318:40)
      at Object.<anonymous> (src/tools.ts:1:1)
      at Object.<anonymous> (src/tools.test.ts:1:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.074 s
Ran all test suites matching src/tools.test.ts.
(node:11148) Warning: `--localstorage-file` was provided without a valid path
(Use `node --trace-warnings ...` to show where the warning was created)
